modify store format

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,10 @@
 {
     "cSpell.words": [
+        "Aaftab",
         "persistor",
         "Pressable",
         "reduxjs",
+        "Shekh",
         "Shilai"
     ]
 }
