--- a/package.json
+++ b/package.json
@@ -7,19 +7,31 @@
     "ios": "react-native run-ios",
     "lint": "eslint .",
     "start": "react-native start",
-    "test": "jest"
+    "test": "jest",
+    "postinstall": "patch-package"
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^2.0.0",
     "@react-native-clipboard/clipboard": "^1.14.3",
+    "@react-navigation/bottom-tabs": "^6.6.1",
+    "@react-navigation/material-top-tabs": "^6.6.14",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.11.0",
     "@reduxjs/toolkit": "^2.3.0",
+    "axios": "^1.7.7",
+    "moment": "^2.30.1",
+    "patch-package": "^8.0.0",
     "react": "18.3.1",
     "react-native": "0.76.0",
+    "react-native-alert-notification": "^0.4.0",
     "react-native-otp-inputs": "^7.4.0",
+    "react-native-pager-view": "^6.4.1",
+    "react-native-reanimated": "^3.16.1",
+    "react-native-root-siblings": "^5.0.1",
+    "react-native-root-toast": "^3.6.0",
     "react-native-safe-area-context": "^4.12.0",
     "react-native-screens": "^3.34.0",
+    "react-native-tab-view": "^3.5.2",
     "react-redux": "^9.1.2",
     "redux-persist": "^6.0.0"
   },
