--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-native-reanimated": "^3.16.1",
     "react-native-safe-area-context": "^4.12.0",
     "react-native-screens": "^3.34.0",
+    "react-native-select-dropdown": "^4.0.1",
     "react-native-simple-toast": "^3.3.1",
     "react-native-tab-view": "^3.5.2",
     "react-redux": "^9.1.2",
