--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@react-native-async-storage/async-storage": "^2.0.0",
     "@react-native-clipboard/clipboard": "^1.14.3",
+    "@react-native/gradle-plugin": "^0.77.0",
     "@react-navigation/bottom-tabs": "^6.6.1",
     "@react-navigation/material-top-tabs": "^6.6.14",
     "@react-navigation/native": "^6.1.18",
@@ -24,9 +25,13 @@
     "react": "18.3.1",
     "react-native": "0.76.0",
     "react-native-alert-notification": "^0.4.0",
+    "react-native-date-picker": "^5.0.10",
+    "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-otp-inputs": "^7.4.0",
     "react-native-pager-view": "^6.4.1",
+    "react-native-print": "^0.11.0",
     "react-native-reanimated": "^3.16.1",
+    "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "^4.12.0",
     "react-native-screens": "^3.34.0",
     "react-native-select-dropdown": "^4.0.1",
